# voxel_game

./: Cargo.toml  NOTES.md  README.md  notes.md
assets/blockmodel/: Air.ron  Cobblestone.ron  DebugBlock.ron  DebugSlab.ron  Dirt.ron  GrassBlock.ron  Leaves.ron  Log.ron  Planks.ron  Stone.ron
assets/shaders/: chunk.wgsl
src/: axis.rs  cuboid.rs  debug.rs  debug_info.rs  display.rs  face.rs  global_config.rs  macros.rs  main.rs  main_menu.rs  pos.rs  savedata.rs  ui.rs
src/block/: block_trait.rs  macros.rs  mod.rs  prelude.rs
src/block/blocks/: air.rs  cobblestone.rs  debug_block.rs  debug_slab.rs  dirt.rs  grass_block.rs  leaves.rs  log.rs  mod.rs  planks.rs  stone.rs
src/block_model/: array_texture_test.rs  block_model_asset.rs  chunk_material.rs  mod.rs  wireframe_rendering.rs
src/entity/: mod.rs  movement.rs
src/entity/collision/: collider.rs  mod.rs  move_and_slide.rs  ray.rs
src/entity/player/: interact_block.rs  mod.rs  movement.rs  player_model.rs
src/entity/player/cam/: first_person_cam.rs  free_cam.rs  mod.rs
src/game_world/: mod.rs
src/game_world/chunk/: block_array.rs  generation_stage.rs  is_loaded.rs  mod.rs
src/game_world/chunk/render/: combine_mesh.rs  mesh.rs  mod.rs
src/game_world/loading/: mod.rs  worldgen.rs
src/game_world/loading/worldgen/: mod.rs  terrain.rs  trees.rs
src/input/: gamepad.rs  input_funcs.rs  keyboard.rs  mod.rs  mouse.rs
src/pos/: block.rs  block_in_chunk.rs  chunk.rs  mod.rs  world.rs
